# openeval-lab

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ICML_PAPER.md  IMPLEMENTATION_SUMMARY.md  README.md  code_humaneval_spec.json  coverage.xml  openeval-lock.json  pyproject.toml  test_code_execution.py  test_library.py  test_mcqa.py  test_mcqa_simple.py
.github/workflows/: ci.yml
docs/: 10-day-contribution-plan.md
examples/: code_spec.json  code_toy.jsonl  icml_evaluation_example.py  mcqa_loglik_spec.json  mcqa_toy.jsonl  qa_cache_spec.json  qa_csv_spec.json  qa_jinja_spec.json  qa_judge_spec.json  qa_judge_spec.yaml  qa_metrics_spec.json  qa_openai_spec.json  qa_registry_spec.json  qa_spec.json  qa_spec.yaml  qa_toy.csv  qa_toy.jsonl  qa_write_out.md  qa_write_out_spec.json  sum_spec.json  sum_toy.jsonl
runs/: 20250808-120644.json  20250808-121032.json  20250808-125901.json  20250809-000331.json  index.json
scripts/: create_project_board.md
src/openeval/: __init__.py  cache.py  cli.py  core.py  icml_framework.py  library.py  loglikelihood.py  loglikelihood_new.py  loglikelihood_old.py  optimization.py  prompt.py  registry.py  spec.py  utils.py
src/openeval/adapters/: anthropic_adapter.py  echo.py  huggingface_adapter.py
tests/: conftest.py  test_cache.py  test_cli_write_out.py  test_code_execution.py  test_icml_framework.py  test_library.py  test_loglikelihood.py  test_loglikelihood_old.py  test_manifest_git.py  test_metric_judge.py  test_prompt.py  test_smoke.py  test_statistical.py  test_summarization.py  test_utils_retry.py
(+24 files in other folders)
