[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openeval-lab"
version = "0.0.1"
description = "Extensible, reproducible evaluation framework for LLMs and agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Your Name", email = "you@example.com" },
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "rich>=13.7",
  "uvicorn>=0.29",
  "fastapi>=0.111",
  "jinja2>=3.1",
  "httpx>=0.27",
  "numpy>=1.26",
  "pandas>=2.2",
  "orjson>=3.10",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "ruff>=0.5.0",
  "black>=24.4",
]
openai = [
  "openai>=1.40.0",
]
hf = [
  "datasets>=3.0.0",
]
metrics = [
  "sacrebleu>=2.4.0",
  "bert-score>=0.3.13",
]

[project.urls]
Homepage = "https://github.com/your-username/openeval-lab"
Repository = "https://github.com/your-username/openeval-lab"

[project.scripts]
openeval = "openeval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q --cov=openeval --cov-report=xml"
